[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/Options/discard_sprite.png" type="Texture" id=1]
[ext_resource path="res://GUI/Options/Options.gd" type="Script" id=2]
[ext_resource path="res://GUI/Options/decklist_sprite.png" type="Texture" id=3]
[ext_resource path="res://GUI/Options/activedeck_sprite.png" type="Texture" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="CardListButoon" type="TextureButton" parent="."]
margin_left = 480.0
margin_top = 512.0
margin_right = 512.0
margin_bottom = 544.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveDeckButton" type="TextureButton" parent="."]
margin_left = 64.0
margin_top = 512.0
margin_right = 96.0
margin_bottom = 544.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscardPileButton" type="TextureButton" parent="."]
margin_left = 896.0
margin_top = 512.0
margin_right = 928.0
margin_bottom = 544.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="CardListButoon" to="." method="_on_CardListButoon_button_down"]
[connection signal="button_down" from="ActiveDeckButton" to="." method="_on_DeckButton_button_down"]
[connection signal="button_down" from="DiscardPileButton" to="." method="_on_DiscardPileButton_button_down"]
